--- a/style.css
+++ b/style.css
@@ -430,7 +430,7 @@ nav ul li a:hover {
     color: #FFFFFF;
 }
 
-.btn {
+.bitn {
     background: white;
     color: #00B207;
     border: none;
@@ -954,6 +954,10 @@ button:hover {
     border-radius: 25px;
     font-size: 16px;
     cursor: pointer;
+    gap: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .pricee {
@@ -1566,6 +1570,7 @@ h3 {
     border-radius: 30px;
     cursor: pointer;
     font-size: 1rem;
+    margin-bottom: 30px;
 }
 
 .newsletter-icons span {
